--- a/app/src/main/res/menu/main_menu.xml
+++ b/app/src/main/res/menu/main_menu.xml
@@ -5,5 +5,8 @@
         <item
             android:id="@+id/messages_fragment"
             android:title="@string/messages" />
+        <item
+            android:id="@+id/request_permissions"
+            android:title="@string/request_permissions" />
     </group>
 </menu>
