--- a/app/src/main/res/menu/main_menu.xml
+++ b/app/src/main/res/menu/main_menu.xml
@@ -5,5 +5,11 @@
         <item
             android:id="@+id/messages_fragment"
             android:title="@string/messages" />
+        <item
+            android:id="@+id/menu_login"
+            android:title="@string/login" />
+        <item
+            android:id="@+id/menu_logout"
+            android:title="@string/logout" />
     </group>
 </menu>
