--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -31,6 +31,13 @@
             app:exitAnim="@anim/nav_default_exit_anim"
             app:popEnterAnim="@anim/nav_default_pop_enter_anim"
             app:popExitAnim="@anim/nav_default_pop_exit_anim" />
+        <action
+            android:id="@+id/action_mainFragment_to_photoFragment"
+            app:destination="@id/photo_fragment"
+            app:enterAnim="@anim/nav_default_enter_anim"
+            app:exitAnim="@anim/nav_default_exit_anim"
+            app:popEnterAnim="@anim/nav_default_pop_enter_anim"
+            app:popExitAnim="@anim/nav_default_pop_exit_anim" />
     </fragment>
     <fragment
         android:id="@+id/secondFragment"
@@ -42,4 +49,9 @@
         android:name="com.rocketinsights.android.ui.MessagesFragment"
         android:label="@string/messages"
         tools:layout="@layout/fragment_messages" />
+    <fragment
+        android:id="@+id/photo_fragment"
+        android:name="com.rocketinsights.android.ui.PhotoFragment"
+        android:label="@string/photo"
+        tools:layout="@layout/fragment_photo" />
 </navigation>
