--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -6,6 +6,7 @@
     <dimen name="tall_toolbar_height">300dp</dimen>
     <dimen name="progress_bar_size">40dp</dimen>
     <dimen name="fragment_messages_min_height">700dp</dimen>
+    <dimen name="fragment_photo_min_height">700dp</dimen>
     <dimen name="main_message_margin_top">70dp</dimen>
     <dimen name="main_image_size">100dp</dimen>
 </resources>
