--- a/app/src/main/res/menu/main_menu.xml
+++ b/app/src/main/res/menu/main_menu.xml
@@ -7,10 +7,13 @@
             android:title="@string/messages" />
         <item
             android:id="@+id/request_permissions"
-            android:title="@string/permissions_request" />       
+            android:title="@string/permissions_request" />
+        <item
+            android:id="@+id/request_location"
+            android:title="@string/location_request_current" />
         <item
             android:id="@+id/menu_login"
-            android:title="@string/login" />     
+            android:title="@string/login" />
         <item
             android:id="@+id/menu_logout"
             android:title="@string/logout" />
