--- a/app/src/main/res/menu/main_menu.xml
+++ b/app/src/main/res/menu/main_menu.xml
@@ -9,6 +9,9 @@
             android:id="@+id/request_permissions"
             android:title="@string/permissions_request" />
         <item
+            android:id="@+id/photo_fragment"
+            android:title="@string/take_a_photo" />
+        <item
             android:id="@+id/request_location"
             android:title="@string/location_request_current" />
         <item
