Integrate Google Maps.

--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -55,4 +55,9 @@
         android:name="com.rocketinsights.android.ui.PhotoFragment"
         android:label="@string/photo"
         tools:layout="@layout/fragment_photo" />
+    <fragment
+        android:id="@+id/maps_fragment"
+        android:name="com.rocketinsights.android.ui.MapsFragment"
+        android:label="@string/maps"
+        tools:layout="@layout/fragment_maps" />
 </navigation>
