--- a/app/src/main/res/menu/main_menu.xml
+++ b/app/src/main/res/menu/main_menu.xml
@@ -6,14 +6,11 @@
             android:id="@+id/messages_fragment"
             android:title="@string/messages" />
         <item
-            android:id="@+id/request_permissions"
-            android:title="@string/permissions_request" />
-        <item
             android:id="@+id/photo_fragment"
             android:title="@string/take_a_photo" />
         <item
-            android:id="@+id/request_location"
-            android:title="@string/location_request_current" />
+            android:id="@+id/maps_fragment"
+            android:title="@string/maps_display" />
         <item
             android:id="@+id/menu_login"
             android:title="@string/login" />
