Adding compose example (PlayerScreen).

--- a/app/src/main/res/menu/main_menu.xml
+++ b/app/src/main/res/menu/main_menu.xml
@@ -12,6 +12,9 @@
             android:id="@+id/maps_fragment"
             android:title="@string/maps_display" />
         <item
+            android:id="@+id/player_fragment"
+            android:title="@string/players" />
+        <item
             android:id="@+id/menu_login"
             android:title="@string/login" />
         <item
