--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -9,4 +9,5 @@
     <dimen name="fragment_photo_min_height">700dp</dimen>
     <dimen name="main_message_margin_top">70dp</dimen>
     <dimen name="main_image_size">100dp</dimen>
+    <dimen name="animation_subtitle_translation_start">10dp</dimen>
 </resources>
