Adding an example of Lottie animation.

--- a/app/src/main/res/layout/fragment_animations.xml
+++ b/app/src/main/res/layout/fragment_animations.xml
@@ -32,7 +32,7 @@
         android:textColor="@color/black" />
 
     <com.google.android.material.card.MaterialCardView
-        android:id="@+id/card_animation_1"
+        android:id="@+id/card_lottie_animation"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         style="@style/CardView.AndroidBase.Animation">
