--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -10,4 +10,5 @@
     <dimen name="main_message_margin_top">70dp</dimen>
     <dimen name="main_image_size">100dp</dimen>
     <dimen name="animation_subtitle_translation_start">10dp</dimen>
+    <dimen name="lottie_animation_size">300dp</dimen>
 </resources>
