--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -79,10 +79,22 @@
             app:exitAnim="@anim/nav_default_exit_anim"
             app:popEnterAnim="@anim/nav_default_pop_enter_anim"
             app:popExitAnim="@anim/nav_default_pop_exit_anim" />
+        <action
+            android:id="@+id/show_property_animation_fragment"
+            app:destination="@id/property_animation_fragment"
+            app:enterAnim="@anim/nav_default_enter_anim"
+            app:exitAnim="@anim/nav_default_exit_anim"
+            app:popEnterAnim="@anim/nav_default_pop_enter_anim"
+            app:popExitAnim="@anim/nav_default_pop_exit_anim" />
     </fragment>
     <fragment
         android:id="@+id/account_setup_animation_fragment"
         android:name="com.rocketinsights.android.ui.AccountSetupAnimationFragment"
         android:label="Account Setup"
         tools:layout="@layout/fragment_account_setup_animation" />
+    <fragment
+        android:id="@+id/property_animation_fragment"
+        android:name="com.rocketinsights.android.ui.PropertyAnimationFragment"
+        android:label="Property Animation"
+        tools:layout="@layout/fragment_property_animation" />
 </navigation>
