--- a/app/src/main/res/xml/fragment_animations_scene.xml
+++ b/app/src/main/res/xml/fragment_animations_scene.xml
@@ -21,13 +21,13 @@
             android:alpha="0"
             android:scaleX="0.5"
             android:scaleY="0.5"
-            motion:layout_constraintBottom_toTopOf="@id/card_animation_2"
+            motion:layout_constraintBottom_toTopOf="@id/card_property_animation"
             motion:layout_constraintEnd_toEndOf="parent"
             motion:layout_constraintStart_toStartOf="parent"
             motion:layout_constraintTop_toBottomOf="@id/text_subtitle"
             motion:layout_constraintVertical_chainStyle="packed" />
         <Constraint
-            android:id="@+id/card_animation_2"
+            android:id="@+id/card_property_animation"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginEnd="@dimen/activity_horizontal_margin"
@@ -53,7 +53,7 @@
             motion:layout_constraintBottom_toBottomOf="parent"
             motion:layout_constraintEnd_toEndOf="parent"
             motion:layout_constraintStart_toStartOf="parent"
-            motion:layout_constraintTop_toBottomOf="@id/card_animation_2" />
+            motion:layout_constraintTop_toBottomOf="@id/card_property_animation" />
         <Constraint
             android:id="@+id/text_subtitle"
             android:layout_width="wrap_content"
@@ -77,13 +77,13 @@
             android:layout_marginBottom="@dimen/activity_vertical_margin"
             android:layout_marginStart="@dimen/activity_horizontal_margin"
             android:layout_marginEnd="@dimen/activity_horizontal_margin"
-            motion:layout_constraintBottom_toTopOf="@id/card_animation_2"
+            motion:layout_constraintBottom_toTopOf="@id/card_property_animation"
             motion:layout_constraintEnd_toEndOf="parent"
             motion:layout_constraintStart_toStartOf="parent"
             motion:layout_constraintTop_toBottomOf="@id/text_subtitle"
             motion:layout_constraintVertical_chainStyle="packed" />
         <Constraint
-            android:id="@+id/card_animation_2"
+            android:id="@+id/card_property_animation"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginEnd="@dimen/activity_horizontal_margin"
@@ -103,7 +103,7 @@
             motion:layout_constraintBottom_toBottomOf="parent"
             motion:layout_constraintEnd_toEndOf="parent"
             motion:layout_constraintStart_toStartOf="parent"
-            motion:layout_constraintTop_toBottomOf="@id/card_animation_2" />
+            motion:layout_constraintTop_toBottomOf="@id/card_property_animation" />
         <Constraint
             android:id="@+id/text_subtitle"
             android:layout_width="wrap_content"
