--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,4 +7,5 @@
     <color name="white">#FFFFFF</color>
     <color name="black">#000000</color>
     <color name="blue_100">#bbdefb</color>
+    <color name="blue_100_32">#52BBDEFB</color>
 </resources>
