--- a/app/src/main/res/layout/fragment_account_setup_animation.xml
+++ b/app/src/main/res/layout/fragment_account_setup_animation.xml
@@ -5,6 +5,9 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/white"
+    android:transitionGroup="true"
+    android:transitionName="@string/card_lottie_transition"
     tools:context=".ui.AccountSetupAnimationFragment">
 
     <TextView
@@ -16,6 +19,7 @@
         android:layout_marginEnd="@dimen/activity_horizontal_margin"
         android:text="@string/setting_up_your_rocket_account"
         android:textAppearance="?attr/textAppearanceHeadline6"
+        android:textColor="@color/black"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
