--- a/app/src/main/res/layout/fragment_property_animation.xml
+++ b/app/src/main/res/layout/fragment_property_animation.xml
@@ -6,6 +6,8 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/blue_100"
+    android:transitionGroup="true"
+    android:transitionName="@string/card_property_animation_transition"
     tools:context=".ui.PropertyAnimationFragment">
 
     <com.google.android.material.card.MaterialCardView
@@ -139,7 +141,7 @@
     </com.google.android.material.card.MaterialCardView>
 
     <com.google.android.material.card.MaterialCardView
-        android:id="@+id/card_animation_3"
+        android:id="@+id/card_container_transform"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginStart="@dimen/activity_horizontal_margin"
@@ -213,7 +215,7 @@
         style="@style/CardView.AndroidBase.Animation"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/card_animation_3">
+        app:layout_constraintTop_toBottomOf="@id/card_container_transform">
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
