--- a/app/src/main/res/xml/fragment_animations_scene.xml
+++ b/app/src/main/res/xml/fragment_animations_scene.xml
@@ -36,12 +36,12 @@
             android:alpha="0"
             android:scaleX="0.5"
             android:scaleY="0.5"
-            motion:layout_constraintBottom_toTopOf="@id/card_animation_3"
+            motion:layout_constraintBottom_toTopOf="@id/card_container_transform"
             motion:layout_constraintEnd_toEndOf="parent"
             motion:layout_constraintStart_toStartOf="parent"
             motion:layout_constraintTop_toBottomOf="@id/card_lottie_animation" />
         <Constraint
-            android:id="@+id/card_animation_3"
+            android:id="@+id/card_container_transform"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginEnd="@dimen/activity_horizontal_margin"
@@ -89,12 +89,12 @@
             android:layout_marginEnd="@dimen/activity_horizontal_margin"
             android:layout_marginStart="@dimen/activity_horizontal_margin"
             android:layout_marginBottom="@dimen/activity_vertical_margin"
-            motion:layout_constraintBottom_toTopOf="@id/card_animation_3"
+            motion:layout_constraintBottom_toTopOf="@id/card_container_transform"
             motion:layout_constraintEnd_toEndOf="parent"
             motion:layout_constraintStart_toStartOf="parent"
             motion:layout_constraintTop_toBottomOf="@id/card_lottie_animation" />
         <Constraint
-            android:id="@+id/card_animation_3"
+            android:id="@+id/card_container_transform"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginEnd="@dimen/activity_horizontal_margin"
