--- a/app/src/main/res/layout/fragment_account_setup_animation.xml
+++ b/app/src/main/res/layout/fragment_account_setup_animation.xml
@@ -5,7 +5,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/white"
+    android:background="?android:attr/colorBackground"
     android:transitionGroup="true"
     android:transitionName="@string/card_lottie_transition"
     tools:context=".ui.AccountSetupAnimationFragment">
@@ -19,7 +19,6 @@
         android:layout_marginEnd="@dimen/activity_horizontal_margin"
         android:text="@string/setting_up_your_rocket_account"
         android:textAppearance="?attr/textAppearanceHeadline6"
-        android:textColor="@color/black"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
