--- a/app/src/main/res/layout/fragment_animations.xml
+++ b/app/src/main/res/layout/fragment_animations.xml
@@ -5,7 +5,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/blue_100"
+    android:background="?attr/colorSecondary"
     android:transitionGroup="true"
     app:layoutDescription="@xml/fragment_animations_scene"
     tools:context=".ui.AnimationsFragment">
@@ -19,7 +19,6 @@
         android:layout_marginEnd="@dimen/activity_horizontal_margin"
         android:text="@string/animations"
         android:textAppearance="?attr/textAppearanceHeadline3"
-        android:textColor="@color/black"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
@@ -29,8 +28,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/animation_screen_subtitle"
-        android:textAppearance="?attr/textAppearanceSubtitle1"
-        android:textColor="@color/black" />
+        android:textAppearance="?attr/textAppearanceSubtitle1" />
 
     <com.google.android.material.card.MaterialCardView
         android:id="@+id/card_lottie_animation"
@@ -56,7 +54,6 @@
                 android:layout_marginEnd="@dimen/activity_horizontal_margin"
                 android:text="@string/animation_1_title"
                 android:textAppearance="?attr/textAppearanceBody1"
-                android:textColor="@color/black"
                 android:textStyle="bold"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
@@ -74,7 +71,6 @@
                 android:maxLines="2"
                 android:text="@string/animation_1_description"
                 android:textAppearance="?attr/textAppearanceSubtitle2"
-                android:textColor="@color/black"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
@@ -107,7 +103,6 @@
                 android:layout_marginEnd="@dimen/activity_horizontal_margin"
                 android:text="@string/animation_2_title"
                 android:textAppearance="?attr/textAppearanceBody1"
-                android:textColor="@color/black"
                 android:textStyle="bold"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
@@ -125,7 +120,6 @@
                 android:maxLines="2"
                 android:text="@string/animation_2_description"
                 android:textAppearance="?attr/textAppearanceSubtitle2"
-                android:textColor="@color/black"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
@@ -158,7 +152,6 @@
                 android:layout_marginEnd="@dimen/activity_horizontal_margin"
                 android:text="@string/animation_3_title"
                 android:textAppearance="?attr/textAppearanceBody1"
-                android:textColor="@color/black"
                 android:textStyle="bold"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
@@ -176,7 +169,6 @@
                 android:maxLines="2"
                 android:text="@string/animation_3_description"
                 android:textAppearance="?attr/textAppearanceSubtitle2"
-                android:textColor="@color/black"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
