--- a/app/src/main/res/layout/fragment_container_transform.xml
+++ b/app/src/main/res/layout/fragment_container_transform.xml
@@ -5,7 +5,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/blue_100"
+    android:background="?attr/colorSecondary"
     android:transitionGroup="true"
     android:transitionName="@string/card_container_transition"
     tools:context=".ui.ContainerTransformFragment">
@@ -39,7 +39,7 @@
         android:contentDescription="@string/info_button"
         android:background="?android:selectableItemBackgroundBorderless"
         android:src="@drawable/ic_info_24"
-        android:tint="@color/colorPrimaryDark"
+        android:tint="?attr/colorPrimaryVariant"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -84,7 +84,6 @@
                 android:layout_marginEnd="@dimen/activity_horizontal_margin"
                 android:text="@string/animation_3_title"
                 android:textAppearance="?attr/textAppearanceBody1"
-                android:textColor="@color/black"
                 android:textStyle="bold"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
@@ -100,7 +99,6 @@
                 android:layout_marginBottom="@dimen/activity_vertical_margin"
                 android:text="@string/animation_3_description"
                 android:textAppearance="?attr/textAppearanceSubtitle2"
-                android:textColor="@color/black"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
