--- a/app/src/main/res/layout/fragment_main.xml
+++ b/app/src/main/res/layout/fragment_main.xml
@@ -5,6 +5,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="?android:attr/colorBackground"
     android:fitsSystemWindows="true"
     tools:context=".ui.MainFragment">
 
@@ -22,24 +23,31 @@
             app:contentScrim="?attr/colorPrimary"
             app:expandedTitleGravity="top"
             app:layout_scrollFlags="scroll|exitUntilCollapsed|snap"
+            app:statusBarScrim="?attr/colorPrimary"
             app:titleEnabled="false">
 
             <ImageView
                 android:id="@+id/parallax_image"
                 android:layout_width="match_parent"
                 android:layout_height="@dimen/tall_toolbar_height"
+                android:layout_marginStart="@dimen/activity_horizontal_margin"
+                android:layout_marginEnd="@dimen/activity_horizontal_margin"
                 android:contentDescription="@string/parallax_image"
-                android:scaleType="centerCrop"
+                android:fitsSystemWindows="true"
+                android:scaleType="fitCenter"
+                android:src="@drawable/ic_rocketinsights_logo_text"
                 app:layout_collapseMode="parallax"
-                app:layout_scrollFlags="scroll|enterAlways" />
+                app:layout_scrollFlags="scroll|enterAlways"
+                app:tint="?attr/colorOnPrimary" />
 
-            <androidx.appcompat.widget.Toolbar
+            <com.google.android.material.appbar.MaterialToolbar
                 android:id="@+id/toolbar"
                 android:layout_width="match_parent"
                 android:layout_height="?attr/actionBarSize"
                 android:layout_gravity="bottom"
+                android:background="@android:color/transparent"
                 app:layout_collapseMode="pin"
-                app:titleTextColor="@android:color/white" />
+                app:titleTextColor="?attr/colorOnPrimary" />
 
         </com.google.android.material.appbar.CollapsingToolbarLayout>
 
@@ -65,23 +73,23 @@
                 android:layout_marginRight="@dimen/activity_horizontal_margin"
                 android:layout_marginTop="@dimen/main_message_margin_top"
                 android:text="@string/loading"
-                app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintTop_toTopOf="parent"/>
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
 
             <ImageView
                 android:id="@+id/stockImage"
-                android:layout_marginTop="50dp"
                 android:layout_width="@dimen/main_image_size"
                 android:layout_height="@dimen/main_image_size"
-                android:visibility="gone"
-                tools:visibility="visible"
+                android:layout_marginTop="50dp"
+                android:contentDescription="@string/stock_image"
                 android:transitionName="stockImage"
-                tools:src="@drawable/stock_image"
-                app:layout_constraintStart_toStartOf="parent"
+                android:visibility="gone"
                 app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@id/message"
-                android:contentDescription="@string/stock_image"/>
+                tools:src="@drawable/stock_image"
+                tools:visibility="visible" />
 
         </androidx.constraintlayout.widget.ConstraintLayout>
 
